--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="boxicons/css/boxicons.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;600;700;900&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Qq2c9I+cHFsX5mnyEnAqxKDTTLhxS+8VTY9IyqOGVNMI4xW/yeC4e4w7eiz0Ebw0b7q3m44xwbJ1z5nXvGv08w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
